gitops/apps/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app.kubernetes.io/name: ui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: retail-store
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ui
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: retail-store
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: catalog
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app.kubernetes.io/name: cart
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: retail-store
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cart
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app.kubernetes.io/name: orders
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: retail-store
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: orders
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  labels:
    app.kubernetes.io/name: checkout
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: retail-store
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: checkout
---
apiVersion: v1
kind: Service
metadata:
  name: recommendations
  labels:
    app.kubernetes.io/name: recommendations
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: retail-store
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: recommendations
